--- a/.gitignore
+++ b/.gitignore
@@ -7,9 +7,6 @@
 # Ignore bundler config.
 /.bundle
 
-# Ignore all environment files.
-/.env*
-
 # Ignore all logfiles and tempfiles.
 /log/*
 /tmp/*
@@ -33,4 +30,5 @@
 # Ignore master key for decrypting credentials and more.
 /config/master.key
 
-.env
+# Ignore the local environment file, but NOT the example file.
+/.env
