Fix: Altera ENV.fetch para ENV[] no mongoid.yml para o assets:precompile

--- a/config/mongoid.yml
+++ b/config/mongoid.yml
@@ -1,6 +1,7 @@
 production:
   clients:
     default:
-      uri: <%= ENV.fetch('MONGODB_URL') %>
+      
+      uri: <%= ENV['MONGODB_URL'] %>
       options:
         server_selection_timeout: 5
