--- a/config/mongoid.yml
+++ b/config/mongoid.yml
@@ -1,7 +1,17 @@
+development:
+  clients:
+    default:
+      database: seo_monitor_development
+      hosts:
+        - localhost:27017
+      options: {}
+  options: {}
+
 production:
   clients:
     default:
-      
-      uri: <%= ENV['MONGODB_URL'] %>
-      options:
-        server_selection_timeout: 5
+      database: seo_monitor_production
+      hosts:
+        - localhost:27017
+      options: {}
+  options: {}
