--- a/config/mongoid.yml
+++ b/config/mongoid.yml
@@ -1,17 +1,11 @@
 development:
   clients:
     default:
-      database: seo_monitor_development
-      hosts:
-        - localhost:27017
-      options: {}
+      uri: <%= ENV.fetch('MONGODB_URL', 'mongodb://localhost:27017/seo_monitor_development') %>
   options: {}
 
 production:
   clients:
     default:
-      database: seo_monitor_production
-      hosts:
-        - localhost:27017
-      options: {}
+      uri: <%= ENV.fetch('MONGODB_URL', 'mongodb://localhost:27017/seo_monitor_production') %>
   options: {}
