--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,48 +1,38 @@
 services:
-  web:
-    build: .
-    command: bundle exec rails s -b '0.0.0.0'
-    volumes:
-      - .:/rails
-    ports:
-      - "3000:3000"
-    depends_on:
-      - db
-      - redis
-    env_file:
-      - ./.env
-    environment:
-      MONGODB_URL: mongodb://db:27017/seo_monitor_production
-      REDIS_URL: redis://redis:6379/0
-
-  sidekiq:
-    build: .
-    command: bundle exec sidekiq
-    volumes:
-      - .:/rails
-    depends_on:
-      - db
-      - redis
-    env_file:
-      - ./.env
-    environment:
-      MONGODB_URL: mongodb://db:27017/seo_monitor_production
-      REDIS_URL: redis://redis:6379/0
-
   db:
     image: mongo:latest
-    ports:
-      - "27017:27017"
+    restart: always
     volumes:
       - mongo_data:/data/db
-
+    healthcheck:
+      test: ["CMD", "mongosh", "--eval", "db.runCommand('ping').ok"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
   redis:
     image: redis:latest
-    ports:
-      - "6379:6379"
-    volumes:
-      - redis_data:/data
+    restart: always
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+  web:
+    build: .
+    command: sh -c "./docker-entrypoint.sh && bundle exec puma -C config/puma.rb"
+    depends_on:
+      db:
+        condition: service_healthy
+      redis:
+        condition: service_healthy 
+  sidekiq:
+    build: .
+    command: sh -c "./docker-entrypoint.sh && bundle exec sidekiq -C config/sidekiq.yml"
+    depends_on:
+      db:
+        condition: service_healthy
+      redis:
+        condition: service_healthy 
 
 volumes:
   mongo_data:
-  redis_data:
