--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,6 +28,7 @@ services:
       RAILS_ENV: production
       MONGO_HOST: db
       REDIS_URL: redis://redis:6379/1
+      SECRET_KEY_BASE: ${SECRET_KEY_BASE}
     depends_on:
       db:
         condition: service_healthy
@@ -41,6 +42,7 @@ services:
       RAILS_ENV: production
       MONGO_HOST: db
       REDIS_URL: redis://redis:6379/1
+      SECRET_KEY_BASE: ${SECRET_KEY_BASE}
     depends_on:
       db:
         condition: service_healthy
