--- a/config/mongoid.yml
+++ b/config/mongoid.yml
@@ -1,11 +1,18 @@
-development:
-  clients:
-    default:
-      uri: <%= ENV.fetch('MONGODB_URL', 'mongodb://localhost:27017/seo_monitor_development') %>
-  options: {}
-
 production:
   clients:
     default:
-      uri: <%= ENV.fetch('MONGODB_URL', 'mongodb://localhost:27017/seo_monitor_production') %>
-  options: {}
+      database: seo_monitor_production
+      hosts:
+        - <%= ENV['MONGO_HOST'] %>:27017
+      options:
+        server_selection_timeout: 5
+        connect_timeout: 5
+
+development:
+  clients:
+    default:
+      database: seo_monitor_development
+      hosts:
+        - <%= ENV['MONGO_HOST'] || 'localhost' %>:27017
+      options:
+        server_selection_timeout: 1
