--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,6 +29,7 @@ services:
       MONGO_HOST: db
       REDIS_URL: redis://redis:6379/1
       SECRET_KEY_BASE: ${SECRET_KEY_BASE}
+      SERPAPI_API_KEY: ${SERPAPI_API_KEY}
     depends_on:
       db:
         condition: service_healthy
@@ -43,6 +44,7 @@ services:
       MONGO_HOST: db
       REDIS_URL: redis://redis:6379/1
       SECRET_KEY_BASE: ${SECRET_KEY_BASE}
+      SERPAPI_API_KEY: ${SERPAPI_API_KEY}
     depends_on:
       db:
         condition: service_healthy
